Added almost all projects

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-"Hello World" 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css.css" type="text/css">
+    <title>Adrian Stański</title>
+</head>
+<body>
+    <div class="navbar">
+        <ul>
+            <li><a class="active" href="index.html">Strona główna</a></li>
+            <li><a href="runner/html.html">Endless Runner</a></li>
+            <li><a href="flappy duck/html.html">Flappy kiwi</a></li>
+            <li><a href="paint/html.html">"Paint"</a></li>
+            <li><a href="balloon shooter/html.html">Balloon Shooter</a></li>
+            <li><a href="wonsz/html.html">Wonsz</a></li>
+            <li><a href="brick break/html.html">Brick Break</a></li>
+          </ul>
+    </div>
+    <div class="body">
+        <br>
+        <h1>Witaj na mojej stronie</h1>
+        <p>Tutaj znajdziesz moje losowe projekty z studiów lub też inne prywatne</p>
+    </div>
+
+</body>
+</html>
